--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".HocPhanDaJoinActivity"></activity>
+        <activity android:name=".MainActivity2"></activity>
+        <activity android:name=".HocPhanDaJoinActivity" />
         <activity android:name=".HocPhanActivity" />
         <activity android:name=".StudyActivity" />
         <activity android:name=".HomeActivity" />
         <activity
             android:name=".MainActivity"
             android:windowSoftInputMode="adjustNothing">
-            >
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
