--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-
-#Sun Nov 08 10:42:51 ICT 2020
-sdk.dir=C\:\\Users\\Admin\\AppData\\Local\\Android\\Sdk
+#Sun Nov 15 22:56:04 ICT 2020
+sdk.dir=C\:\\Users\\nguye\\AppData\\Local\\Android\\Sdk
