--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Nov 15 09:55:05 ICT 2020
-sdk.dir=C\:\\Users\\Admin\\AppData\\Local\\Android\\Sdk
+#Tue Nov 17 10:39:24 ICT 2020
+sdk.dir=C\:\\Users\\nguye\\AppData\\Local\\Android\\Sdk
